<resources>
    <string name="app_name">UpYourPartyAndroid</string>
    <string name="login_button_login_text">Войти</string>
    <string name="login_registration_text">ЗАРЕГИСТРИРОВАТЬСЯ</string>
    <string name="login_text_hint">Введите почту</string>
    <string name="login_edit_password_hint">Введите пароль</string>
    <string name="registration_title_text">РЕГИСТРАЦИЯ</string>
    <string name="registration_edit_name_hint">Имя</string>
    <string name="registration_edit_last_name_hint">Фамилия</string>
    <string name="registration_edit_second_name_hint">Отчество</string>
    <string name="registration_edit_city_hint">Город</string>
    <string name="registration_edit_phone_hint">+7 (000) 000–00–00</string>
    <string name="registration_edit_mail_hint">Почта</string>
    <string name="registration_edit_password_hint">Пароль</string>
    <string name="registration_edit_confirm_password_hint">Подтверждение пароля</string>
    <string name="registration_button_text">Зарегистрироваться</string>
    <string name="registration_success_message">Вы успешно зарегистрировались</string>
    <string name="bio_validation_error">Поле может содержать только кириллицу</string>
    <string name="password_validation_error">Пароль должен содержать только латинские буквы верхнего или нижнего регистра, а также цифры</string>
    <string name="password_match_error">Пароли не совпадают</string>
    <string name="mail_address_validation_error">Некорректный адрес электронной почты</string>
    <string name="password_length_error">Длина пароля должна быть не менее 6 символов</string>
    <string name="bottom_nav_categoties">Категории</string>
    <string name="bottom_nav_messages">Сообщения</string>
    <string name="bottom_nav_profile">Профиль</string>
    <string name="bottom_nav_favorites">Избранное</string>
    <string name="bottom_nav_advertisement">Объявления</string>
    <string name="my_advertisements_add_advertisement">Добавить объявление</string>
    <string name="my_advertisements_edit">Изменить</string>
    <string name="my_advertisements_delete">Удалить</string>
    <string name="create_announce_title_hint">Название…</string>
    <string name="create_announce_description_hint">Описание…</string>
    <string name="create_announce_city_hint">Город…</string>
    <string name="create_announce_phone_hint">Телефон…</string>
    <string name="create_announce_price_hint">Цена</string>
    <string name="create_announce_title_text">НОВОЕ ОБЪЯВЛЕНИЕ</string>
    <string name="create_announce_edit_title_text">РЕДАКТИРОВАНИЕ</string>
    <string name="create_announce_button_edit">Сохранить изменения</string>
    <string name="create_announce_add_advertisement_btn_text">Опубликовать</string>
    <string name="create_announce_city_invalid_message">Поле город не должно быть пустым и содержать минимум 3 символа</string>
    <string name="create_announce_name_invalid_message">Поле название не должно быть пустым и содержать минимум 3 символа</string>
    <string name="create_announce_description_invalid_message">Поле описание не должно быть пустым и содержать минимум 10 символа</string>
    <string name="create_announce_phone_invalid_message">Поле телефон имеет не валидный формат</string>
    <string name="create_announce_price_invalid_message">Поле цена имеет не валидный формат</string>

    <string name="advertisements_category_party">Детский праздник</string>
    <string name="advertisements_category_corporate">Корпоратив</string>
    <string name="advertisements_category_birthday">День рождения</string>
    <string name="advertisements_category_wedding">Свадьба</string>
    <string name="advertisement_info_contact_with_user">Сообщение</string>
    <string name="advertisement_info_all_reviews">Все отзывы</string>
    <string name="profile_log_out">Выйти</string>
    <string name="advertisements_my_empty">Вы пока не добавили ни одного объявления</string>
    <string name="advertisements_list_empty">Здесь пока ничего нет</string>
    <string name="review_title">Отзывы</string>
    <string name="advertisement_info_add_review">Оставить отзыв</string>
    <string name="advertisement_info_no_reviews">У этого объявления пока нет отзывов</string>
    <string name="submit_review_title">ОСТАВИТЬ ОТЗЫВ</string>
    <string name="submit_review_description">Поставьте оценку</string>
    <string name="submit_review_comment_title">Оставьте комментарий</string>
    <string name="submit_review_button_submit">Отправить</string>
    <string name="submit_review_comment_hint">Комментарий</string>
    <string name="submit_review_rating_0">Ужасно</string>
    <string name="submit_review_rating_2">Плохо</string>
    <string name="submit_review_rating_3">Хорошо</string>
    <string name="submit_review_rating_4">Отлично</string>
    <string name="submit_review_rating_5">Великолепно</string>

</resources>