<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:text="@string/registration_title_text" />

        <ImageView
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="10dp"
            android:src="@drawable/ic_arrow_back" />

    </RelativeLayout>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/editTextName"
            style="@style/EditText.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_name_hint"
            android:maxLength="30"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextLastName"
            style="@style/EditText.Round"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_last_name_hint"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextSecondName"
            style="@style/EditText.Round"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_second_name_hint"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextCity"
            style="@style/EditText.Round"
            android:maxLength="30"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_city_hint"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextPhone"
            style="@style/EditText.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_phone_hint"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextMail"
            style="@style/EditText.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLength="30"
            android:hint="@string/registration_edit_mail_hint"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextPassword"
            style="@style/EditText.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/registration_edit_password_hint"
            android:maxLength="30"
            android:inputType="textPassword"
            android:layout_marginHorizontal="30dp" />

        <EditText
            android:id="@+id/editTextConfirmPassword"
            style="@style/EditText.Round"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:maxLength="30"
            android:inputType="textPassword"
            android:hint="@string/registration_edit_confirm_password_hint"
            android:layout_marginHorizontal="30dp" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistration"
        style="@style/Button.Normal"
        android:layout_marginHorizontal="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/registration_button_text"
        android:layout_marginBottom="30dp"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
