<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/Text.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/bottom_nav_categoties"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/title"
        android:layout_marginTop="10dp"
        >

        <LinearLayout
            android:id="@+id/birthDayContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="60dp">

            <ImageView
                android:src="@drawable/cake"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/advertisements_category_birthday"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/weddingContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="60dp">

            <ImageView
                android:src="@drawable/wedding"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/advertisements_category_wedding"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/corporateContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="60dp">

            <ImageView
                android:src="@drawable/hotel"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/advertisements_category_corporate"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/childPartyContainer"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginHorizontal="10dp"
            android:layout_height="60dp">

            <ImageView
                android:src="@drawable/hat"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                style="@style/Text.Title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:text="@string/advertisements_category_party"
                />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>